# market-wave

./: .gitignore  README.ko.md  README.md  plan.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
docs/: API.md
src/market_wave/: __init__.py  _conditions.py  _execution.py  _mdf.py  _microstructure.py  _orderbook.py  _plotting.py  _types.py  adapter.py  api.py  book.py  cli.py  config.py  corpus.py  distribution.py  field.py  generation.py  generator.py  market.py  metrics.py  physics.py  state.py  theta.py  units.py  validation.py  visualization.py
tests/: test_contracts.py  test_end_to_end.py  test_market_core_invariants.py  test_market_wave_api_contract.py  test_market_wave_generation.py  test_market_wave_plotting.py  test_price_discovery.py  test_tick_native_metrics.py  test_tick_native_realism_relations.py
