[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-wave"
version = "0.2.5"
description = "Dynamic MDF synthetic market data generator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Small Turtle 2" },
]
keywords = ["market", "simulation", "synthetic-data", "orderbook", "mdf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dataframe = [
  "pandas>=2",
]
dev = [
  "pandas>=2",
  "pytest>=8",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/smturtle2/market-wave"
Repository = "https://github.com/smturtle2/market-wave"

[tool.hatch.build.targets.wheel]
packages = ["src/market_wave"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not slow"]
markers = [
  "slow: long-running realism and stress tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
