[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-wave"
version = "1.0.0"
description = "Price-time synthetic stock market simulator with visible-only corpus output and market-screen plots."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "market-wave" }]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
market-wave = "market_wave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
